# astropy-integration-testing

./: .gitignore  .pre-commit-config.yaml  README.md  astroquery_pytest.ini  build_dashboard.py  conftest.py  index.html  packages.yaml  pyproject.toml  run_integration.py  status.py  sunpy_pytest.ini  sunpy_tst.ini  tox.ini
.github/: dependabot.yml
.github/workflows/: integration.yml  integration_testing.yml  preview-link.yml  preview.yml
astropy_integration/: cli.py  config.py  dashboard.py  run.py  status.py
astropy_integration/templates/: _base.html  _style.css  index.html
templates/: _style.css  cell.html  index.html  single_page.html  variant.html
