[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "astropy-integration"
version = "0.1.0"
description = "Run and dashboard the astropy ecosystem integration matrix."
requires-python = ">=3.11"
dependencies = [
    "jinja2",
    "packaging",
    "pyyaml",
]

[project.scripts]
astropy-integration = "astropy_integration.cli:main"

[tool.setuptools.packages.find]
include = ["astropy_integration*"]

[tool.setuptools.package-data]
astropy_integration = ["templates/*.html", "templates/*.css"]
